<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffff"
    tools:context=".MainActivity">


    <ImageView
        android:layout_width="414dp"
        android:layout_height="409dp"
        android:layout_marginBottom="396dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:layout_width="359dp"
        android:layout_height="56dp"
        android:layout_marginStart="102dp"
        android:layout_marginLeft="102dp"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        android:layout_marginBottom="332dp"
        android:background="#FFFFFF"
        android:text="Welcome in To Do App!"
        android:textSize="90px"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.865" />

    <Button
        android:id="@+id/btSignin"
        android:layout_width="130dp"
        android:layout_height="56dp"
        android:layout_marginStart="206dp"
        android:layout_marginLeft="206dp"
        android:layout_marginEnd="205dp"
        android:layout_marginRight="205dp"
        android:layout_marginBottom="104dp"
        android:background="@drawable/textview_border"
        android:text="@string/bsignin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edNama"
        android:layout_width="223dp"
        android:layout_height="48dp"
        android:layout_marginStart="158dp"
        android:layout_marginLeft="158dp"
        android:layout_marginEnd="160dp"
        android:layout_marginRight="160dp"
        android:layout_marginBottom="280dp"
        android:background="@drawable/textview_border"
        android:ems="10"
        android:hint="@string/tNama"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="158dp"
        android:layout_marginLeft="158dp"
        android:layout_marginEnd="346dp"
        android:layout_marginRight="346dp"
        android:layout_marginBottom="331dp"
        android:text="Name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="157dp"
        android:layout_marginLeft="157dp"
        android:layout_marginEnd="321dp"
        android:layout_marginRight="321dp"
        android:layout_marginBottom="251dp"
        android:text="Password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edPassword"
        android:layout_width="224dp"
        android:layout_height="48dp"
        android:layout_marginStart="158dp"
        android:layout_marginLeft="158dp"
        android:layout_marginEnd="159dp"
        android:layout_marginRight="159dp"
        android:layout_marginBottom="200dp"
        android:background="@drawable/textview_border"
        android:ems="10"
        android:hint="@string/tPassword"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/mnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="73dp"

        android:text="@string/mRegist"
        android:textColor="#0B3AE4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>